[gd_scene load_steps=7 format=3 uid="uid://beb5sq05847ey"]

[ext_resource type="Script" path="res://World.gd" id="1"]
[ext_resource type="Material" path="res://test_mat.tres" id="2"]
[ext_resource type="Script" path="res://Camera.gd" id="3"]
[ext_resource type="Script" path="res://Panel.gd" id="4"]

[sub_resource type="ArrayMesh" id="1"]

[sub_resource type="Environment" id="2"]

[node name="World" type="Node3D"]
transform = Transform3D(0.999999, -0.00161116, -0.000459896, 0.00161248, 0.999995, 0.00290171, 0.000455228, -0.00290245, 0.999996, 0, 0, 2.8059)
script = ExtResource("1")

[node name="ProceduralMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 8.84029e-10, 2.32831e-10, 3.96767e-11, 1, -1.86265e-09, 1.16415e-10, 0, 1, 0, 0, 0)
material_override = ExtResource("2")
mesh = SubResource("1")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 8.33177e-09, -9.63337e-09, -6.5836e-10, 1, 3.95812e-09, 0, -2.09548e-09, 1, 2.08165e-12, 2.08165e-12, 10)
light_energy = 50.0
light_size = 0.212
omni_range = 20.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 9.49433e-09, -9.63337e-09, -1.82251e-09, 1, 7.45058e-09, 0, -5.58794e-09, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
environment = SubResource("2")
script = ExtResource("3")

[node name="Panel" type="Panel" parent="."]
offset_right = 412.0
offset_bottom = 357.0
script = ExtResource("4")

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 0
offset_left = 18.7664
offset_top = 25.9149
offset_right = 302.766
offset_bottom = 437.915
columns = 2

[node name="Label" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Number of branches"

[node name="NumBranches" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
min_value = 1.0
value = 3.0

[node name="Label2" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Depth"

[node name="Depth" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 10.0
value = 3.0

[node name="Label3" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Height Offset fraction from Base"

[node name="BaseOffset" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.3

[node name="Label4" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Branch Separation fraction"

[node name="BranchSep" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.1

[node name="Label5" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Branch Length Scale"

[node name="BranchLengthScale" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.7

[node name="Label6" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Branch Width Scale"

[node name="BranchWidthScale" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label7" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Initial Branch Height"

[node name="InitialHeight" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 20.0
step = 0.01
value = 5.0

[node name="Label8" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Initial Base Width"

[node name="IntialBaseWidth" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 10.0
step = 0.01
value = 2.0

[node name="Label9" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Initial Top Width"

[node name="IntialTopWidth" type="SpinBox" parent="Panel/GridContainer"]
layout_mode = 2
max_value = 10.0
step = 0.01
value = 1.0

[connection signal="value_changed" from="Panel/GridContainer/NumBranches" to="." method="_on_NumBranches_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/Depth" to="." method="_on_Depth_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/BaseOffset" to="." method="_on_BaseOffset_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/BranchSep" to="." method="_on_BranchSep_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/BranchLengthScale" to="." method="_on_BranchLengthScale_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/BranchWidthScale" to="." method="_on_BranchWidthScale_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/InitialHeight" to="." method="_on_InitialHeight_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/IntialBaseWidth" to="." method="_on_IntialBaseWidth_value_changed"]
[connection signal="value_changed" from="Panel/GridContainer/IntialTopWidth" to="." method="_on_IntialTopWidth_value_changed"]
